Fixed Blogs layout problem. Added info fetched from external API

--- a/src/app/blog/Blog.css
+++ b/src/app/blog/Blog.css
@@ -5,6 +5,15 @@
   background-color: lightpink;
 }
 
+.BlogContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .BlogPageTitle {
   font-size: 32px;
   font-weight: bold;
@@ -24,6 +33,7 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+  padding-bottom: 30px;
 }
 ::-webkit-scrollbar {
   width: 10px;
